# cyberpot

./: .gitignore  CITATION.cff  CYBERPOT_DEPENDENCIES_FIXED.md  CYBERPOT_ENTERPRISE_ROADMAP.md  CYBERPOT_ENTERPRISE_TRANSFORMATION.md  CYBERPOT_MAKEFILE_COMPLETE.md  CYBERPOT_OS_IMAGES_COMPLETE.md  DEVELOPMENT_MAKEFILE_README.md  Makefile  README.md  docker-compose.yml  genuser.sh  genuserwin.ps1  install-system-tools.sh  install.sh  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  setup.py  uninstall.sh  update.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: basic-support-info.yml  docker-publish.yml  main.yml  validate.yml
compose/: customizer.py  cyberpot_services.yml  llm.yml  mac_win.yml  mini.yml  mobile.yml  sensor.yml  standard.yml  tarpit.yml
doc/: project-improvement-plan.md
docker/_builder/: docker-compose.yml  setup_builder.sh
docker/_tests/tests/: rdphoneypot.sh
docker/conpot/: Dockerfile
docker/cyberpot-init/: Dockerfile  docker-compose.yml
docker/dionaea/: Dockerfile
docker/h0neytr4p/: Dockerfile  docker-compose.yml
docker/miniprint/: docker-compose.yml
docker/rdphoneypot/: Dockerfile  docker-compose.yml
docker/redishoneypot/: Dockerfile
docker/templates/: Dockerfile.base  Dockerfile.elasticsearch  Dockerfile.enterprise-api  Dockerfile.forensics-collector  Dockerfile.kibana  Dockerfile.logstash  Dockerfile.nginx  Dockerfile.threat-intelligence  Dockerfile.vulnerability-scanner
enterprise/: __init__.py  deploy-cyberpot-enterprise.py  deploy-enterprise.py
enterprise/config/: cyberpot-enterprise-config.py
enterprise/security_tools/: __init__.py
infrastructure/: README.md  deploy-cyberpot.py  requirements.txt
infrastructure/images/: README.md
infrastructure/templates/: deployment_config.py
infrastructure/terraform/aws/: main.tf  (+3 more)
installer/install/: cyberpot.yml
scripts/: analyze_project_structure.py  build_images.py  check_health.py  select_compose_preset.py  setup_devcontainer.sh  setup_env.sh  validate_repo.py
tests/: __init__.py  conftest.py  test_build_images.py  test_check_health.py  test_compose_presets.py  test_project_structure_analysis.py  test_validate_repo.py
(+33 files in other folders)
